--- a/src/Header.css
+++ b/src/Header.css
@@ -1,15 +1,34 @@
 .component-header {
   padding: 15px;
-  position: relative;
-  font-weight: normal;
+  background-color: #8000ff;
+  padding-bottom: 200px;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
+  font-weight: 600;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 32px;
   text-align: center;
-  color: #333;
+  color: #fff;
 }
 
 .component-header img {
   position: relative;
   top: 6px;
   padding: 0 14px;
+}
+
+.component-header .github-link {
+  margin-top: 1rem;
+  text-decoration: none;
+  font-size: 1rem;
+  color: #fff;
+  display: inline-flex;
+  gap: 1ch;
+  align-items: center;
+}
+.component-header .github-link:hover {
+  text-decoration: underline;
+}
+.component-header .github-link svg {
+  height: 1.4rem;
 }
