--- a/src/SearchInput.css
+++ b/src/SearchInput.css
@@ -1,5 +1,9 @@
 .component-search-input {
-  border-bottom: 1px solid #ccc;
+  background-color: #fff;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  position: sticky;
+  top: 0;
 }
 
 .component-search-input > div {
@@ -8,9 +12,13 @@
 
 .component-search-input input {
   border-radius: 4px;
-  border: 1px solid #bbb;
+  /* border: 1px solid #bbb; */
+  border: none;
   box-sizing: border-box;
   font-size: 18px;
-  padding: 10px 8px;
+  padding: 20px 20px;
   width: 100%;
+}
+.component-search-input input:focus {
+  outline: none;
 }
