--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-
+/* 
 body .github-fork-ribbon:before {
   background-color: #333;
 }
@@ -12,4 +12,4 @@ body .github-fork-ribbon:before {
   .github-fork-ribbon {
     display: none;
   }
-}
+} */
